<resources>
    <!-- LoginActivity Strings -->
    <string name="app_name">Adventure of POSt</string>
    <string name="the_adventure_of_post">The Adventure of POSt</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="CPass">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="shape_clicker">Shape Clicker</string>
    <string name="trivia">Trivia</string>
    <string name="sudoku">Sudoku</string>
    <string name="shape_clicker_exit">exit</string>
    <string name="title_activity_scsettings">Settings</string>
    <string name="register_account">Register Account</string>
    <string name="register_message">Don\'t have account?</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="reg_password_error">Password empty or don\'t match</string>

    <!-- GameActivity Strings -->
    <string name="welcome_message">Welcome! %1$s.</string>

    <!-- SC Preference title -->
    <string name="sc_color_of_shaped_object">Color of Shaped Object</string>
    <string name="sc_difficulty_level">Difficulty Level</string>
    <string name="sc_shape_of_object">Difficulty Level</string>

    <!-- SC Color of Shaped Object Preferences -->
    <string name="sc_color_title">Color</string>
    <string name="sc_color_default_value">Black</string>
    <string name="sc_color_summary">Black</string>
    <string name="sc_color_key">scColorKey</string>

    <!-- Trivia Color of Button Preferences -->
    <string name="Trivia_ButtonColor_title">Button Color</string>
    <string name="Trivia_ButtonColor_default_value">Black</string>
    <string name="Trivia_ButtonColor_summary">Black</string>
    <string name="Trivia_ButtonColor_key">TriviaButtonColorKey</string>

    <!-- Trivia Color of Background Preferences -->
    <string name="Trivia_BackgroundColor_title">Background Color</string>
    <string name="Trivia_BackgroundColor_default_value">Black</string>
    <string name="Trivia_BackgroundColor_summary">Black</string>
    <string name="Trivia_BackgroundColor_key">TriviaBackgroundColorKey</string>

    <!-- Trivia Color of Text Preferences -->
    <string name="Trivia_TextColor_title">Text Color</string>
    <string name="Trivia_TextColor_default_value">Black</string>
    <string name="Trivia_TextColor_summary">Black</string>
    <string name="Trivia_TextColor_key">TriviaTextColorKey</string>

    <!-- SC difficulty Preferences -->
    <string name="sc_difficulty_title">Difficulty</string>
    <string name="sc_difficulty_default_value">Easy</string>
    <string name="sc_difficulty_summary">Easy</string>
    <string name="sc_difficulty_key">scDifficultyKey</string>

    <!-- SC shape Preferences -->
    <string name="sc_shape_title">Shape</string>
    <string name="sc_shape_default_value">Circle</string>
    <string name="sc_shape_summary">Circle</string>
    <string name="sc_shape_key">scShapeKey</string>

    <!-- SC mode Preferences -->
    <string name="sc_mode_title">Mode</string>
    <string name="sc_mode_default_value">None</string>
    <string name="sc_mode_summary">None</string>
    <string name="sc_mode_key">scModeKey</string>

    <!-- Sudoku texts -->
    <string name="remove_button">Remove</string>
    <string name="reset_button">Reset</string>
    <string name="next">Next</string>
    <string name="start_button">Start / Resume</string>
    <string name="exit">Exit</string>
    <string name="choose_exit">Please choose one of the following</string>

    <string name="move_stats_header">Moves</string>
    <string name="conflict_stats_header">Conflicts</string>
    <string name="time_stats_header">Time(s)</string>

    <string name="player_scoreboard_button">Player Scores</string>
    <string name="global_scoreboard_button">Global Scores</string>

    <!-- Trivia texts -->
    <string name="TriviaDiff1">Easy</string>
    <string name="TriviaDiff2">Medium</string>
    <string name="TriviaDiff3">Hard</string>
    <string name="TriviaSelectDiff">Select Difficulty</string>
    <string name="title_activity_trivia_settings">Settings</string>
    <string name="Trivia_op">Operation</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pause">Pause</string>
    <string name="save">Save</string>
    <string name="resume">Resume</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="TriviaMult">Multiplication</string>
    <string name="TriviaSub">Subtraction</string>
    <string name="TriviaAdd">Addition</string>

    <!-- Scoreboard texts -->
    <string name="player_score">Player Score:</string>
    <string name="rank">#</string>
    <string name="player">Player</string>
    <string name="time">Time(s)</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="score">Score</string>
    <string name="moves">Moves</string>
    <string name="conflicts">Conflicts</string>
    <string name="global_score_band">Global Score:</string>
    <string name="settings">Settings</string>
    <string name="start_resume">Start/Resume</string>
    <string name="save_score">Save Score?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
