<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--
      TODO this is temp will need to be changed
        -->

    <ListPreference
        android:id="@+id/TriviaColorMenu"
        android:defaultValue="true"
        android:entries="@array/trivia_background_color_entries"
        android:entryValues="@array/trivia_background_color_values"
        android:key="@string/Trivia_BackgroundColor_key"
        android:title="@string/Trivia_BackgroundColor_title" />

    <ListPreference
        android:id="@+id/TriviaButtonColorMenu"
        android:defaultValue="true"
        android:entries="@array/trivia_button_color_entries"
        android:entryValues="@array/trivia_button_color_values"
        android:key="@string/Trivia_ButtonColor_key"
        android:title="@string/Trivia_ButtonColor_title" />

    <ListPreference
        android:id="@+id/TriviaTextColorMenu"
        android:defaultValue="true"
        android:entries="@array/trivia_text_color_entries"
        android:entryValues="@array/trivia_text_color_values"
        android:key="@string/Trivia_TextColor_key"
        android:title="@string/Trivia_TextColor_title" />


</PreferenceScreen>


