<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trivia.ui.TriviaOperationSelectActivity">
    <TextView
        android:id="@+id/TriviaSelectDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select gamemode"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/TriviaDiffButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TriviaAdd"
        android:onClick="onClickAdd"
        app:layout_constraintBottom_toTopOf="@+id/TriviaDiffButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TriviaSelectDiff" />

    <Button
        android:id="@+id/TriviaDiffButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TriviaSub"
        android:onClick="onClickSub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TriviaSelectDiff" />

    <Button
        android:id="@+id/TriviaDiffButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TriviaMult"
        android:onClick="onClickMult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TriviaDiffButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>