<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sudoku.ui.SudokuActivity">

    <com.group0562.adventureofpost.sudoku.ui.SudokuCellGridView
        android:id="@+id/grid"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".sudoku.ui.SudokuActivity">

    </com.group0562.adventureofpost.sudoku.ui.SudokuCellGridView>

    <com.group0562.adventureofpost.sudoku.ui.SudokuNumPadGridView
        android:id="@+id/numPad"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid"
        app:layout_constraintVertical_bias="0.050000012">

    </com.group0562.adventureofpost.sudoku.ui.SudokuNumPadGridView>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/remove_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numPad" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/reset_button"
        app:layout_constraintStart_toEndOf="@+id/removeButton"
        app:layout_constraintTop_toBottomOf="@+id/numPad" />

    <TableLayout
        android:id="@+id/statsTable"
        android:layout_width="378dp"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="627dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center">

            <TextView
                android:id="@+id/statsMoveHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="30dp"
                android:text="@string/move_stats_header"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/statsConflictHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="30dp"
                android:text="@string/conflict_stats_header"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center">

            <TextView
                android:id="@+id/statsMoveNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="30dp"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/statsConflictNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="30dp"
                android:text=""
                android:textAlignment="center" />

        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/numPad" />

</androidx.constraintlayout.widget.ConstraintLayout>